fixed alignment callout, changed color for match in patsearch to red

--- a/public/styles/reformat.css
+++ b/public/styles/reformat.css
@@ -31,4 +31,4 @@
 .cm-s-reformat .CodeMirror-activeline-background { background: #404040; }
 */
 
-.cm-s-reformat span.cm-string { font-weight: bold }
+.cm-s-reformat span.cm-string { font-weight: bold; color: red; }
